--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -16,9 +16,8 @@
 }
 
 .contact-container.visible {
-  animation: fadeIn 2s ease;
+  animation: fadeInContact 2s ease;
 }
-
 
 .contact-title {
   font-size: 2.5rem;
@@ -96,7 +95,7 @@
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
 }
 
-@keyframes fadeIn {
+@keyframes fadeInContact {
   0% {
     opacity: 0;
     transform: translateY(30px);
